changed repository link

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Intergrate Firebase into your Nuxt project.",
   "main": "index.js",
   "author": "Pascal Luther",
-  "repository": "https://github.com/lupas",
-  "homepage": "https://github.com/lupas/nuxt-fire",
+  "repository": "https://github.com/lupas/nuxt-fire",
+  "homepage": "https://github.com/lupas",
   "keywords": [
     "nuxt, firebase"
   ],
