--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "firebase": "^5.5.8"
+  "peerDependencies": {
+    "firebase": "^5.5.9"
   }
 }
