--- a/packages/nuxt-fire/package.json
+++ b/packages/nuxt-fire/package.json
@@ -17,5 +17,8 @@
   "peerDependencies": {
     "nuxt": "^2.10.2",
     "firebase": "^7.3.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
