--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "npm:publish": "cd packages/nuxt-fire && npm publish"
   },
   "devDependencies": {
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.19.1",
+    "babel-eslint": "^10.0.3"
   }
 }
