--- a/packages/nuxt-fire/package.json
+++ b/packages/nuxt-fire/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-fire",
-  "version": "3.3.0",
+  "version": "3.4.0",
   "license": "MIT",
   "description": "Intergrate Firebase into your Nuxt project.",
   "main": "src/index.js",
@@ -19,6 +19,9 @@
     "firebase": "^7.5.0"
   },
   "dependencies": {
+    "cookieparser": "^0.1.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15"
   }
 }
