--- a/packages/nuxt-fire/package.json
+++ b/packages/nuxt-fire/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cookieparser": "^0.1.0",
+    "firebase-admin": "^8.8.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15"
