--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
     "babel-eslint": "^10.0.3"
+  },
+  "dependencies": {
+    "vue-google-adsense": "^1.8.0",
+    "vue-script2": "^2.1.0"
   }
 }
