--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "npm:publish": "cd packages/nuxt-fire && npm publish"
   },
   "devDependencies": {
-    "vuepress": "^1.2.0",
+    "@vuepress/plugin-google-analytics": "^1.2.0",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
-    "babel-eslint": "^10.0.3"
+    "vuepress": "^1.2.0"
   },
   "dependencies": {
     "vue-google-adsense": "^1.8.0",
