--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   ],
   "author": "Pascal Luther",
   "repository": "https://github.com/lupas/nuxt-fire",
-  "homepage": "https://github.com/lupas",
+  "homepage": "https://nuxtfire.netlify.com/",
   "keywords": [
     "nuxt, firebase"
   ],
