fix: fix npm keywords

--- a/packages/nuxt-fire/package.json
+++ b/packages/nuxt-fire/package.json
@@ -9,7 +9,12 @@
   "repository": "https://github.com/lupas/nuxt-fire",
   "homepage": "https://github.com/lupas",
   "keywords": [
-    "nuxt, firebase, firestore, realtimedatabase, google, googleauthentication"
+    "nuxt",
+    "firebase",
+    "firestore",
+    "realtimedatabase",
+    "google",
+    "googleauthentication"
   ],
   "publishConfig": {
     "access": "public"
