--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://github.com/lupas/nuxt-fire",
   "homepage": "https://nuxtfire.netlify.com/",
   "keywords": [
-    "nuxt, firebase"
+    "nuxt",
+    "firebase"
   ],
   "scripts": {
     "docs:dev": "vuepress dev packages/docs",
