--- a/packages/nuxt-fire/package.json
+++ b/packages/nuxt-fire/package.json
@@ -7,7 +7,7 @@
   "types": "src/index.d.ts",
   "author": "Pascal Luther",
   "repository": "https://github.com/lupas/nuxt-fire",
-  "homepage": "https://github.com/lupas",
+  "homepage": "https://nuxtfire.netlify.com/",
   "keywords": [
     "nuxt",
     "firebase",
