--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "npm:publish": "cd packages/nuxt-fire && npm publish"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.19.1",
-    "vuepress": "^1.2.0"
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "prettier": "1.19.1",
+    "vuepress": "1.3.1"
   },
   "dependencies": {
-    "@vuepress/plugin-google-analytics": "^1.2.0",
+    "@vuepress/plugin-google-analytics": "1.3.1",
     "vuepress-plugin-google-adsense": "0.1.0"
   }
 }
