--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "firebase"
   ],
   "scripts": {
-    "docs:dev": "vuepress dev packages/docs",
-    "docs:build": "vuepress build packages/docs",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "npm:publish": "cd packages/nuxt-fire && npm publish"
   },
   "devDependencies": {
@@ -24,7 +24,6 @@
     "vuepress": "1.3.1"
   },
   "dependencies": {
-    "@vuepress/plugin-google-analytics": "1.3.1",
-    "vuepress-plugin-google-adsense": "0.1.0"
+    "@vuepress/plugin-google-analytics": "1.3.1"
   }
 }
