--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   ],
   "author": "Pascal Luther",
   "repository": "https://github.com/nuxt-community/firebase-module",
-  "homepage": "https://nuxtfire.netlify.com/",
+  "homepage": "https://firebase.nuxtjs.org/",
   "keywords": [
     "nuxt",
     "firebase"
