--- a/packages/firebase-module/package.json
+++ b/packages/firebase-module/package.json
@@ -7,7 +7,7 @@
   "types": "src/index.d.ts",
   "author": "Pascal Luther",
   "repository": "https://github.com/nuxt-community/firebase-module",
-  "homepage": "https://nuxtfire.netlify.com/",
+  "homepage": "https://firebase.nuxtjs.org/",
   "keywords": [
     "nuxt",
     "firebase",
