--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "author": "Pascal Luther",
   "files": [
-    "lib"
+    "lib",
+    "types/*.d.ts"
   ],
   "main": "lib/module.js",
   "types": "types/index.d.ts",
@@ -29,8 +30,7 @@
   "dependencies": {
     "consola": "^2.11.3",
     "firebase-admin": "^8.9.2",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15"
+    "jwt-decode": "^2.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
