feat(auth): finialize server auth after tests

--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
+    "@nuxt/types": "^0.6.4",
     "@nuxtjs/eslint-config": "latest",
     "@nuxtjs/module-test-utils": "latest",
     "@vuepress/plugin-google-analytics": "latest",
     "codecov": "latest",
     "eslint": "latest",
-    "firebase": "latest",
+    "firebase": "^7.11.0",
     "husky": "latest",
     "jest": "latest",
     "nuxt-edge": "latest",
