--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nuxtjs/module-test-utils": "latest",
     "@vuepress/plugin-google-analytics": "latest",
     "codecov": "latest",
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "latest",
     "firebase": "^7.11.0",
     "husky": "latest",
@@ -53,5 +54,10 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
