--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/firebase",
-  "version": "5.0.3",
+  "version": "5.0.5",
   "description": "Intergrate Firebase into your Nuxt project.",
   "keywords": [
     "firebase",
@@ -29,8 +29,7 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "consola": "^2.11.3",
-    "promise-throttle": "^1.0.1"
+    "consola": "^2.11.3"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
