--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/firebase",
-  "version": "5.0.7",
+  "version": "5.0.5",
   "description": "Intergrate Firebase into your Nuxt project.",
   "keywords": [
     "firebase",
@@ -29,28 +29,28 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "consola": "^2.11.3"
+    "consola": "^2.11.3",
+    "promise-throttle": "^1.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
-    "@nuxt/types": "^0.7.4",
+    "@nuxt/types": "latest",
     "@nuxtjs/eslint-config": "latest",
     "@nuxtjs/module-test-utils": "^1.6.1",
-    "@vuepress/plugin-google-analytics": "^1.4.1",
+    "@vuepress/plugin-google-analytics": "^1.4.0",
     "codecov": "latest",
     "cz-conventional-changelog": "latest",
     "eslint": "latest",
-    "firebase": "^7.14.2",
+    "firebase": "^7.13.1",
     "husky": "latest",
-    "jest": "^25.4.0",
+    "jest": "latest",
     "standard-version": "latest",
-    "vuepress": "^1.4.1",
-    "vuepress-theme-carbon": "^1.0.0"
+    "vuepress": "^1.4.0"
   },
   "peerDependencies": {
-    "firebase": "^7.14.2",
-    "nuxt": "^2.12.2"
+    "firebase": "^7.13.1",
+    "nuxt": "^2.12.1"
   },
   "publishConfig": {
     "access": "public"
@@ -61,6 +61,6 @@
     }
   },
   "optionalDependencies": {
-    "firebase-admin": "^8.11.0"
+    "firebase-admin": "^8.10.0"
   }
 }
