--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/firebase",
-  "version": "5.0.5",
+  "version": "5.0.7",
   "description": "Intergrate Firebase into your Nuxt project.",
   "keywords": [
     "firebase",
@@ -35,22 +35,23 @@
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
-    "@nuxt/types": "latest",
+    "@nuxt/types": "^0.7.4",
     "@nuxtjs/eslint-config": "latest",
     "@nuxtjs/module-test-utils": "^1.6.1",
-    "@vuepress/plugin-google-analytics": "^1.4.0",
+    "@vuepress/plugin-google-analytics": "^1.4.1",
     "codecov": "latest",
     "cz-conventional-changelog": "latest",
     "eslint": "latest",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.1",
     "husky": "latest",
-    "jest": "latest",
+    "jest": "^25.4.0",
     "standard-version": "latest",
-    "vuepress": "^1.4.0"
+    "vuepress": "^1.4.1",
+    "vuepress-theme-carbon": "^1.0.0"
   },
   "peerDependencies": {
-    "firebase": "^7.13.1",
-    "nuxt": "^2.12.1"
+    "firebase": "^7.14.1",
+    "nuxt": "^2.12.2"
   },
   "publishConfig": {
     "access": "public"
