--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/firebase",
-  "version": "5.2.0",
+  "version": "5.0.7",
   "description": "Intergrate Firebase into your Nuxt project.",
   "keywords": [
     "firebase",
@@ -29,27 +29,27 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "consola": "^2.12.2"
+    "consola": "^2.11.3"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
-    "@nuxt/types": "^0.7.8",
+    "@nuxt/types": "^0.7.4",
     "@nuxtjs/eslint-config": "latest",
     "@nuxtjs/module-test-utils": "^1.6.1",
-    "@vuepress/plugin-google-analytics": "^1.5.0",
+    "@vuepress/plugin-google-analytics": "^1.4.1",
     "codecov": "latest",
     "cz-conventional-changelog": "latest",
     "eslint": "latest",
-    "firebase": "^7.15.0",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "firebase": "^7.14.1",
+    "husky": "latest",
+    "jest": "^25.4.0",
     "standard-version": "latest",
-    "vuepress": "^1.5.0",
+    "vuepress": "^1.4.1",
     "vuepress-theme-carbon": "^1.0.0"
   },
   "peerDependencies": {
-    "firebase": "^7.15.0",
+    "firebase": "^7.14.1",
     "nuxt": "^2.12.2"
   },
   "publishConfig": {
@@ -61,6 +61,6 @@
     }
   },
   "optionalDependencies": {
-    "firebase-admin": "^8.12.1"
+    "firebase-admin": "^8.10.0"
   }
 }
