--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxtjs/firebase",
-  "version": "6.1.0",
+  "version": "6.1.1",
   "description": "Intergrate Firebase into your Nuxt project.",
   "keywords": [
     "firebase",
@@ -32,34 +32,25 @@
     "consola": "^2.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.4",
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
-    "@nuxt/types": "^2.13.3",
-    "@nuxtjs/eslint-config": "latest",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@nuxt/types": "^2.14.0",
+    "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/module-test-utils": "^1.6.3",
     "@vuepress/plugin-google-analytics": "^1.5.2",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
-    "codecov": "latest",
-    "core-js": "2",
-    "cz-conventional-changelog": "latest",
-    "eslint": "latest",
-    "firebase": "^7.16.1",
+    "codecov": "^3.7.2",
+    "cz-conventional-changelog": "^3.2.0",
+    "eslint": "^7.5.0",
+    "firebase": "^7.17.1",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
-    "nuxt": "^2.13.3",
-    "proxy-mock-js": "^1.0.3",
-    "standard-version": "latest",
+    "standard-version": "^8.0.2",
     "vuepress": "^1.5.2",
     "vuepress-theme-carbon": "^1.0.0"
   },
   "peerDependencies": {
-    "firebase": "^7.16.1",
-    "nuxt": "^2.13.3"
+    "firebase": "^7.17.1",
+    "nuxt": "^2.14.0"
   },
   "publishConfig": {
     "access": "public"
