--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   "main": "lib/module.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:dev": "vuepress dev docs",
     "lint": "eslint --ext .js,.vue lib test",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
     "test": "yarn lint && jest",
@@ -37,16 +35,13 @@
     "@nuxt/types": "^2.14.4",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/module-test-utils": "^1.6.3",
-    "@vuepress/plugin-google-analytics": "^1.5.4",
     "codecov": "^3.7.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.7.0",
     "firebase": "^7.19.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
-    "standard-version": "^9.0.0",
-    "vuepress": "^1.5.4",
-    "vuepress-theme-carbon": "^1.0.0"
+    "standard-version": "^9.0.0"
   },
   "peerDependencies": {
     "firebase": "^7.19.1",
