--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
+# https://docs.netlify.com/configure-builds/file-based-configuration
+
 [build]
   base    = "docs"
-  command = "yarn && yarn generate"
-  publish = "docs/dist"
+  command = "yarn generate"
+  publish = "dist"
+  ignore  = "git diff --quiet HEAD^ HEAD . ../package.json"
