--- a/package.json
+++ b/package.json
@@ -30,27 +30,18 @@
     "consola": "^2.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.4",
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@nuxt/types": "^2.14.6",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/module-test-utils": "^1.6.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
-    "codecov": "latest",
-    "core-js": "2",
-    "cz-conventional-changelog": "latest",
-    "eslint": "latest",
+    "codecov": "^3.7.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.10.0",
     "firebase": "^7.21.1",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
-    "nuxt": "^2.13.3",
-    "proxy-mock-js": "^1.0.3",
-    "standard-version": "latest"
+    "standard-version": "^9.0.0"
   },
   "peerDependencies": {
     "firebase": "^7.21.1",
