--- a/package.json
+++ b/package.json
@@ -24,24 +24,34 @@
     "lint": "eslint --ext .js,.vue lib test",
     "release": "yarn test && standard-version && git push --follow-tags && npm publish",
     "test": "yarn lint && jest",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "docs": "cd docs && yarn dev"
   },
   "dependencies": {
     "consola": "^2.15.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.10.4",
+    "@commitlint/cli": "latest",
+    "@commitlint/config-conventional": "latest",
     "@nuxt/types": "^2.14.6",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/module-test-utils": "^1.6.3",
-    "codecov": "^3.7.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "codecov": "latest",
+    "core-js": "2",
+    "cz-conventional-changelog": "latest",
+    "eslint": "latest",
     "firebase": "^7.21.1",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
-    "standard-version": "^9.0.0"
+    "nuxt": "^2.13.3",
+    "proxy-mock-js": "^1.0.3",
+    "standard-version": "latest"
   },
   "peerDependencies": {
     "firebase": "^7.21.1",
