--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -6,10 +6,5 @@
     "dark": "/logo-dark.svg"
   },
   "github": "nuxt-community/firebase-module",
-  "twitter": "nuxt_js",
-  "algolia": {
-    "apiKey": "26073a7590724b3efc377b3b7608f3e0",
-    "indexName": "nuxtjs_firebase",
-    "langAttribute": "lang"
-}
+  "twitter": "nuxt_js"
 }
