--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -11,5 +11,8 @@
     "apiKey": "26073a7590724b3efc377b3b7608f3e0",
     "indexName": "nuxtjs_firebase",
     "langAttribute": "lang"
-}
+  },
+  "slots": {
+    "navBarTop": "navBarTop"
+  }
 }
