--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "jest": "^26.6.3",
     "nuxt": "^2.14.12",
     "proxy-mock-js": "^1.0.3",
-    "standard-version": "latest"
+    "standard-version": "^9.1.0"
   },
   "peerDependencies": {
     "firebase": "^8.2.3",
