docs(fix): Add @babel/preset-env/lib/utils

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,12 +9,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.13.8",
     "content-theme-docs-with-slots": "0.8.2",
-    "nuxt": "2.14.11"
+    "nuxt": "2.14.12"
   },
   "devDependencies": {
     "nuxt-ackee": "^2.0.0"
   }
 }
-
-
