--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -5,7 +5,11 @@
     "light": "/logo-light.svg",
     "dark": "/logo-dark.svg"
   },
-  "github": "nuxt-community/firebase-module",
+  "github": {
+    "repo": "nuxt-community/firebase-module",
+    "branch": "dev",
+    "dir": "allDocuments"
+  },
   "twitter": "nuxt_js",
   "algolia": {
     "apiKey": "26073a7590724b3efc377b3b7608f3e0",
