fix(docs): Minor fixes & color update

--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -16,7 +16,7 @@
     "indexName": "nuxtjs_firebase",
     "langAttribute": "lang"
   },
-  "slots": {
-    "navBarTop": "navBarTop"
+  "colors": {
+    "primary": "#FFA000"
   }
 }
