--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "docus": "0.5.14",
+    "docus": "^0.5.14",
     "nuxt": "^2.15.6"
   },
   "devDependencies": {
